<resources>
    <string name="app_name">Calc</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_comma">,</string>
    <string name="_equal">=</string>
    <string name="_divide">/</string>
    <string name="_multiply">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_AC">A/C</string>
    <string name="_backspace"><![CDATA[<-]]></string>
    <string name="AppThemeLight">Light Theme</string>
    <string name="AppThemeDark">Dark Theme</string>
    <string name="_back">Go Back</string>
    <string name="_settings">Settings</string>
</resources>