<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/constraint_percent"/>

    <TextView
        android:id="@+id/textArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textArea_text"
        android:layout_marginStart="@dimen/button_margins"
        android:layout_marginTop="@dimen/button_margins"
        android:layout_marginEnd="@dimen/button_margins"
        android:layout_marginBottom="@dimen/text_bottom_margin"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_1"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_2"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_3"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_4"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_5"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_6"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_7"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_8"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_9"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_0"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_comma"
        android:text="@string/_comma"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTextStyle"
        android:id="@+id/button_equal"
        android:text="@string/_equal"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonActionStyle"
        android:id="@+id/button_divide"
        android:text="@string/_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonActionStyle"
        android:id="@+id/button_multiply"
        android:text="@string/_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonActionStyle"
        android:id="@+id/button_minus"
        android:text="@string/_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonActionStyle"
        android:id="@+id/button_plus"
        android:text="@string/_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonActionStyle"
        android:id="@+id/button_backspace"
        android:text="@string/_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>