<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/constraint_percent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonThemeStyle"
        android:id="@+id/button_theme_first"
        android:text="@string/AppThemeLight"
        app:layout_constraintTop_toBottomOf="@id/guideline_settings"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonThemeStyle"
        android:id="@+id/button_theme_second"
        android:text="@string/AppThemeDark"
        app:layout_constraintTop_toBottomOf="@id/button_theme_first"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonBackStyle"
        android:id="@+id/button_back"
        android:text="@string/_back"
        app:layout_constraintTop_toBottomOf="@id/button_theme_second"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>